--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
             <groupId>org.gradle</groupId>
             <artifactId>gradle-core</artifactId>
             <version>6.1.1</version>
